--- a/index.html
+++ b/index.html
@@ -1,75 +1,76 @@
 <!DOCTYPE HTML>
 
 <html>
-
 <head>
-  <title>What Is My IP Address ?</title>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+
+  <title>Me Online</title>
+
+  <!-- Favicon Import -->
+  <link rel="icon" type="text/css" href="img/favicon.png">
+  <link id="favicon" rel="shortcut icon" href="img/favicon.png">
+
+  <!-- CSS Import -->
+  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- Share/Embed Content -->
+  <meta property="og:url" content="http://meonline.pages.dev" />
+  <meta property="og:type" content="home-page" />
+  <meta property="og:title" content="Me Online" />
+  <meta property="og:description" content="What information are you leaking everywhere you go online and what do you look like to websites? Find out with this simple tool." />
+  <meta property="og:image" content="https://meonline.pages.dev/img/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 </head>
-<header>
-</header>
 
 <body>
   <noscript>
-    <h2>hmm, i guess you disabled JS so please enable it to see the magic! :)</h2>
-    <p>ــــــــــــــــــــــ</p>
-    <p>ــــــــــــــــــــــ</p>
+    <div id="noscript-warning">Me Online viewer uses Javascript to work its magic. Kindly enable Javascript on your browser and reload the page to restore usability.</div>
   </noscript>
+
   <div id="IP">
-    <h2>Your Public IP Is: </h2>
-    <h2 id="ip"></h2>
+    <h2>Your Public IP Address is:<br><a id="ip"></a></h2>
   </div>
-  <p>ــــــــــــــــــــــ</p>
+
   <div id="LOCATION">
-    <button id="find-me">Check Your Location</button><br />
-    <p id="status"></p>
-    <a id="map-link" target="_blank"></a>
+    <button id="find-me">Check Your Location</button>
+    <h2 id="status"></h2>
+    <h2 id="map-link" target="_blank"></h2>
   </div>
-  <p>ــــــــــــــــــــــ</p>
+
   <div id="LANGUAGE">
-    <h2>Your Browser's Language Is: <a id="language"></a></h2>
+    <h2>Your Browser's Language is:<br><a id="language"></a></h2>
   </div>
-  <p>ــــــــــــــــــــــ</p>
+
   <div id="SCREEN">
-    <h2>Your Screen Size Is: <a id="screen"></a></h2>
+    <h2>Your Screen Size is:<br><a id="screen"></a></h2>
   </div>
-  <p>ــــــــــــــــــــــ</p>
+
   <div id="MOBILE">
-    <h2>Are You Mobile User: <a id="mobile"></a></h2>
+    <h2>You are a Mobile User:<br><a id="mobile"></a></h2>
   </div>
-  <p>ــــــــــــــــــــــ</p>
+
   <div id="COOKIES">
-    <h2>Cookies Enabled: <a id="cookies"></a></h2>
+    <h2>Cookies are Enabled:<br><a id="cookies"></a></h2>
   </div>
-  <p>ــــــــــــــــــــــ</p>
+
   <div id="BROWSER">
-    <h2>Your Browser Is: <a id="browser"></a></h2>
+    <h2>Your Browser is:<br><a id="browser"></a></h2>
   </div>
-  <p>ــــــــــــــــــــــ</p>
+
   <div id="OS">
-    <h2>Your OS Is: <a id="os"></a></h2>
+    <h2>Your Operating System is:<br><a id="os"></a></h2>
   </div>
-  <p>ــــــــــــــــــــــ</p>
+
   <div id="USERAGENT">
-    <h2>Your User-Agent Is: <a id="useragent"></a></h2>
+    <h2>Your User-Agent is:<br><a id="useragent"></a></h2>
   </div>
-  <p>ــــــــــــــــــــــ</p>
+
   <div id="SPEEDTEST">
-    <h2>Your Net Speed Is: <br> <a id="speedtest"></a></h2>
+    <h2>Your Network Speed is:<br><a id="speedtest"></a></h2>
   </div>
+
   <script src="main.js"></script>
 </body>
-
-<footer>
-  <p>ــــــــــــــــــــــ</p>
-  <p>ــــــــــــــــــــــ</p>
-  <h2><a href="https://github.com/EsmailELBoBDev2/Whatismyip">It's Open Source Website</a> & It's Made By <a
-      href="https://esmailelbob.hashbase.io">Esmail EL BoB</a> & <a
-      href="https://github.com/EsmailELBoBDev2/Whatismyip/issues"> Feel Free To Request/Add/Suggest New Ideas</a></h2>
-  <h2><a href="https://github.com/EsmailELBoBDev2/Whatismyip/blob/master/LICENSE">Licensed Under GNU General Public
-      License v3.0</a></h2>
-</footer>
 
 </html>
