--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     <div id="noscript-warning">Me Online viewer uses Javascript to work its magic. Kindly enable Javascript on your browser and reload the page to restore usability.</div>
   </noscript>
 
+  <div id="home">
+    <img src="img/favicon.png">
+    <button><a href="#IP">Find out what you look like to Websites<i class="material-icons">south</i></a></button>
+  </div>
+
   <div id="IP">
     <h2>Your Public IP Address is:<br><a id="ip"></a></h2>
   </div>
