Added Footer and Improved Mobile-friendliness

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
   </div>
 
   <script src="main.js"></script>
+
+  <div id="footer">
+    <button><i class="material-icons">north</i><a href="#home">Go Back</a></button>
+    <h2>Created by IdleEndeavor<br><a href="https://github.com/IdleEndeavor/Me-Online">View on GitHub</a></h2>
+  </div>
 </body>
 
 </html>
