Added a Microphone Testing System with Audio Downloader

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <!-- Script Import -->
+  <script type="text/javascript" src="https://code.jquery.com/jquery.min.js"></script>
+  <script src="https://markjivko.com/dist/recorder.js"></script>
+
   <!-- Share/Embed Content -->
   <meta property="og:url" content="http://meonline.pages.dev" />
   <meta property="og:type" content="home-page" />
@@ -24,15 +28,18 @@
 </head>
 
 <body>
+<!-- No Javascript Enabled -->
   <noscript>
     <div id="noscript-warning">Me Online viewer uses Javascript to work its magic. Kindly enable Javascript on your browser and reload the page to restore usability.</div>
   </noscript>
 
+<!-- Startpage -->
   <div id="home">
     <img src="img/favicon.png">
-    <button><a href="#IP">Find out what you look like to Websites<i class="material-icons">south</i></a></button>
+    <button><a href="#IP">Find out what you look like to Websites ▼</a></button>
   </div>
 
+<!-- Fetched Data -->
   <div id="IP">
     <h2>Your Public IP Address is:<br><a id="ip"></a></h2>
   </div>
@@ -75,10 +82,18 @@
     <h2>Your Network Speed is:<br><a id="speedtest"></a></h2>
   </div>
 
+  <div class="holder">
+    <div data-role="controls">
+      <button>Record Audio</button>
+    </div>
+    <div data-role="recordings"></div>
+  </div>
+
   <script src="main.js"></script>
 
+<!-- Footer -->
   <div id="footer">
-    <button><i class="material-icons">north</i><a href="#home">Go Back</a></button>
+    <button><a href="#home">▲ Go Back</a></button>
     <h2>Created by IdleEndeavor<br><a href="https://github.com/IdleEndeavor/Me-Online">View on GitHub</a></h2>
   </div>
 </body>
